tests/NormalTests/paczka1/fuzzy1/99615565.err
Error in line 5: QU1 S875 8,9
Error in line 23: bin S691 12,2
Error in line 29: iRiKMvmb S875 96,0
